--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,160 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: 'Bosca';
+    src: url('/fonts/bosca/Bosca-Bold.ttf') format('ttf'),
+        url('/fonts/bosca/Bosca-Bold.woff') format('woff'),
+        url('/fonts/bosca/Bosca-Bold.woff2') format('woff2');
+    font-weight: 700;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+@font-face {
+    font-family: 'Bosca';
+    src: url('/fonts/bosca/Bosca-Light.ttf') format('ttf'),
+        url('/fonts/bosca/Bosca-Light.woff') format('woff'),
+        url('/fonts/bosca/Bosca-Light.woff2') format('woff2');
+    font-weight: 200;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@font-face {
+    font-family: 'Bosca';
+    src: url('/fonts/bosca/Bosca-Medium.ttf') format('ttf'),
+        url('/fonts/bosca/Bosca-Medium.woff') format('woff'),
+        url('/fonts/bosca/Bosca-Medium.woff2') format('woff2');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Bosca';
+    src: url('/fonts/bosca/Bosca-Regular.ttf') format('ttf'),
+        url('/fonts/bosca/Bosca-Regular.woff') format('woff'),
+        url('/fonts/bosca/Bosca-Regular.woff2') format('woff2');
+    font-weight: 400;
+}
+
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #2C2C2C;
+}
+
+.font-bosca {
+  font-family: 'Bosca', sans-serif;
+}
+
+
+.search-box {
+  position: relative;
+  width: 400px;
+  height: 50px;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  outline: none;
+
+  
+  
+}
+
+
+.books-cards {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(200px, 1fr));
+  grid-gap: 20px;
+  row-gap: 40px;;
+}
+
+.search-box:focus-within {
+  outline: none;
+  width: 500px;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  right: 8px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+@keyframes circle-animation {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+
+@media only screen and (max-width: 1000px) {
+  .books-cards {
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
   }
 }
 
-.card {
-  padding: 2em;
+
+@media only screen and (max-width: 600px) {
+  .books-cards {
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+  }
 }
 
-.read-the-docs {
-  color: #888;
+@media only screen and (max-width: 400px) {
+  .books-cards {
+    grid-template-columns: repeat(1, minmax(200px, 1fr));
+  }
+}
+
+.book-card {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  transition: all 0.1s ease-in-out;
+  cursor: pointer;
+}
+
+.book-card img {
+  height: 350px;
+  object-fit: cover;
+}
+
+.book-rating {
+  color: #858585;
+  margin: 10px 0;
+}
+
+.book-rating span:first-child {
+  margin-right: 5px;
+}
+
+
+.book-details  .cover {
+    flex: 1;
+  }
+  .book-details .details {
+    flex: 3;
+  }
+
+  .book-details .category {
+    border: 1px solid #333;
+    padding: 5px 10px;
+    border-radius: 50px;
+    margin-right: 5px;
+    font-size: 12px;
+    font-weight: 500;
+    transition: all 150ms;
+  }
+
+.more-details {
+  border-top: 1px solid #b9b9b9;
+  padding-top: 15px;
 }
