--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,126 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+html, body {
+  background-color: #f6f6f6;
+  display: border-box;
+}
+
+.container {
+  perspective: 1200px;
+}
+
+.container .book {
+  width: 160px;
+  height: 220px;
+  margin: 2% auto;
+  background: linear-gradient(45deg, #DAD5DC 0%, #f2ebf4 100%);
+  box-shadow: 8px 8px 8px 0px rgba(151, 146, 153, 0.6);
+  font-family: acumin-pro, sans-serif;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #2b2b2b;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.container .book:hover {
+  transform: rotate3d(0, 1, 0, 21deg);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.container .book > div,
+.container .front > div {
+  position: absolute;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container .front {
+  transform-style: preserve-3d;
+  transform-origin: 0% 50%;
+  transition: transform 0.5s;
+  transform: translate3d(0, 0, 8px);
+  z-index: 10;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.container .front > div {
+  width: 160px;
+  height: 220px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.container .left-side {
+  width: 16px;
+  left: -8px;
+  height: 220px;
+  background-color: rgba(232, 229, 234);
+  transform: rotate3d(0, 1, 0, -90deg);
+}
+
+.cover svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -55px;
+  width: 150px;
+}
+
+.cover .num-up {
+  position: absolute;
+  top: 32px;
+  left: 31px;
+  letter-spacing: 30px;
+  transform: rotate(-90deg);
+}
+
+.cover .num-down {
+  position: relative;
+  top: 33px;
+  left: -47.5px;
+  transform: rotate(-90deg);
+}
+
+.author {
+  font-family: acumin-pro, sans-serif;
+  font-weight: 400;
+  position: absolute;
+  top: 285px;
+  left: 30px;
+  opacity: 0.8;
+}
+
+.container .front > div {
+  border-radius: 0 1.8px 1.8px 0;
+  box-shadow: inset 1.6px 0 4px rgba(0, 0, 0, 0.1);
+}
+
+.container .front:after {
+  content: '';
+  position: absolute;
+  top: 0.8px;
+  bottom: 0.8px;
+  left: -0.8px;
+  width: 0.8px;
+}
+
+.container h2 {
+  width: 200px;
+  height: 16px;
+  color: #2b2b2b;
+  font-size: 6px;
+  line-height: 16px;
+  padding-right: 2px;
+  text-align: right;
+  transform-origin: 0 0;
+  transform: rotate(90deg) translateY(-16px);
+}
+
+.cover {
+  /* background: linear-gradient(45deg, #DAD5DC 0%, #f2ebf4 100%); */
+}
+
+.left-side h2 span:first-child {
+  font-weight: 400;
+  font-size: 5px;
+  padding-right: 8px;
+}
+
+.left-side h2 span:last-child {
+  font-family: acumin-pro, sans-serif;
 }
